--- a/SistemaVentasBatia/ClientApp/src/app/widgets/prospecto/prospecto.widget.html
+++ b/SistemaVentasBatia/ClientApp/src/app/widgets/prospecto/prospecto.widget.html
@@ -94,7 +94,7 @@
     <div class="row mb-3">
         <div>
             <div class="btn-group float-end">
-                <button type="button" (click)="guarda()" class="btn btn-outline-success" id="btnGuardarProspecto" [disabled]="isLoading"><i class="fa-solid fa-save"></i> Guardar</button>
+                <button type="button" (click)="guarda()" class="btn btn-outline-success" id="btnGuardarProspecto"><i class="fa-solid fa-save"></i> Guardar</button>
             </div>
         </div>
     </div>
