--- a/SistemaVentasBatia/ClientApp/src/app/widgets/cliente/cliente.widget.html
+++ b/SistemaVentasBatia/ClientApp/src/app/widgets/cliente/cliente.widget.html
@@ -46,35 +46,35 @@
                             </div>
                         </div>
                         <div class="row">
-                            <div class="col-sm-12 col-md-3 mb-3">
+                            <div class="col-sm-12 col-md-3 col-12 mb-3">
                                 <div class="form-floating">
                                     <input type="text" class="form-control" [(ngModel)]="model.contacto" value="prospecto.nombreContacto" id="Contacto">
                                     <label for="Contacto">Nombre Contacto</label>
                                 </div>
                                 <span *ngIf="ferr('Contacto')" class="text-danger">{{ terr('Contacto') }}</span>
                             </div>
-                            <div class="col-sm-12 col-md-2 mb-3">
+                            <div class="col-sm-12 col-md-2 col-6 mb-3">
                                 <div class="form-floating">
                                     <input type="text" class="form-control" [(ngModel)]="model.departamento" id="Departamento">
                                     <label for="Departamento">Departamento Contacto</label>
                                 </div>
                                 <span *ngIf="ferr('Departamento')" class="text-danger">{{ terr('Departamento') }}</span>
                             </div>
-                            <div class="col-sm-12 col-md-2 mb-3">
+                            <div class="col-sm-12 col-md-2 col-6 mb-3">
                                 <div class="form-floating">
                                     <input type="text" class="form-control" [(ngModel)]="model.puesto" id="Puesto">
                                     <label for="Puesto">Puesto Contacto</label>
                                 </div>
                                 <span *ngIf="ferr('Puesto')" class="text-danger">{{ terr('Puesto') }}</span>
                             </div>
-                            <div class="col-sm-12 col-md-3 mb-3">
+                            <div class="col-sm-12 col-md-3 col-8 mb-3">
                                 <div class="form-floating">
                                     <input type="text" class="form-control" [(ngModel)]="model.email" id="Email">
                                     <label for="Email">Email Contacto</label>
                                 </div>
                                 <span *ngIf="ferr('Email')" class="text-danger">{{ terr('Email') }}</span>
                             </div>
-                            <div class="col-sm-12 col-md-2 mb-3">
+                            <div class="col-sm-12 col-md-2 col-4 mb-3">
                                 <div class="form-floating">
                                     <input type="text" class="form-control" [(ngModel)]="model.telefonos" id="Telefonos">
                                     <label for="Telefonos">Telefonos Contacto</label>
@@ -82,7 +82,7 @@
                                 <span *ngIf="ferr('Telefonos')" class="text-danger">{{ terr('Telefonos') }}</span>
                             </div>
 
-                            <div class="col-md-4 mb-3">
+                            <div class="col-md-4 col-12 mb-3">
                                 <div class="form-floating">
                                     <select class="form-select" [(ngModel)]="model.idEjecutivo" id="IdEjecutivo">
                                         <option value="0">Seleccione...</option>
@@ -92,7 +92,7 @@
                                 </div>
                                 <span *ngIf="ferr('IdEjecutivo')" class="text-danger">{{ terr('IdEjecutivo') }}</span>
                             </div>
-                            <div class="col-md-4 mb-3">
+                            <div class="col-md-4 col-12 mb-3">
                                 <div class="form-floating">
                                     <select class="form-select" [(ngModel)]="model.idGerenteLimpieza" id="IdGerente">
                                         <option value="0">Seleccione...</option>
@@ -102,7 +102,7 @@
                                 </div>
                                 <span *ngIf="ferr('IdGerenteLimpieza')" class="text-danger">{{ terr('IdGerenteLimpieza') }}</span>
                             </div>
-                            <div class="col-md-4 mb-3">
+                            <div class="col-md-4 col-12 mb-3">
                                 <div class="form-floating">
                                     <select class="form-select" [(ngModel)]="model.idEmpresaPagadora" id="IdEmpresaPagadora">
                                         <option value="0">Seleccione...</option>
@@ -112,7 +112,7 @@
                                 </div>
                                 <span *ngIf="ferr('IdEmpresaPagadora')" class="text-danger">{{ terr('IdEmpresaPagadora') }}</span>
                             </div>
-                            <div class="col-md-3 mb-3">
+                            <div class="col-md-3 col-6 mb-3">
                                 <div class="form-floating">
                                     <select class="form-select" [(ngModel)]="model.facturacion" id="idTipo">
                                         <option value="0">Seleccione...</option>
@@ -123,7 +123,7 @@
                                 </div>
                                 <span *ngIf="ferr('Facturacion')" class="text-danger">{{ terr('Facturacion') }}</span>
                             </div>
-                            <div class="col-md-3 mb-3">
+                            <div class="col-md-3 col-6 mb-3">
                                 <div class="form-floating">
                                     <select class="form-select" [(ngModel)]="model.tipoFacturacion" id="idTipoFacturacion">
                                         <option value="0">Seleccione...</option>
@@ -134,14 +134,14 @@
                                 </div>
                                 <span *ngIf="ferr('TipoFacturacion')" class="text-danger">{{ terr('TipoFacturacion') }}</span>
                             </div>
-                            <div class="col-sm-12 col-md-2 mb-3">
+                            <div class="col-sm-12 col-md-2 col-6 mb-3">
                                 <div class="form-floating">
                                     <input type="number" class="form-control" [(ngModel)]="model.credito" id="Credito">
                                     <label for="Credito">Credito</label>
                                 </div>
                                 <span *ngIf="ferr('Credito')" class="text-danger">{{ terr('Credito') }}</span>
                             </div>
-                            <div class="col-sm-12 col-md-2 mb-3">
+                            <div class="col-sm-12 col-md-2 col-6 mb-3">
                                 <div class="form-floating">
                                     <input type="number" class="form-control" [(ngModel)]="model.diasFacturacion" id="DiasFacturacion">
                                     <label for="DiasFacturacion">Días Facturación</label>
@@ -150,44 +150,43 @@
                             </div>
                         </div>
                         <div class="row">
-                            <div class="col-sm-12 col-md-3 mb-3">
+                            <div class="col-sm-12 col-md-3 col-6 mb-3">
                                 <div class="form-floating">
                                     <input type="date" class="form-control" [(ngModel)]="model.fechaInicio" id="FechaInicio" (change)="calcularFechaTermino()">
                                     <label for="FechaInicio">Fecha Inicio</label>
                                 </div>
                                 <span *ngIf="ferr('FechaInicio')" class="text-danger">{{ terr('FechaInicio') }}</span>
                             </div>
-                            <div class="col-sm-12 col-md-2 mb-3">
+                            <div class="col-sm-12 col-md-2 col-6 mb-3">
                                 <div class="form-floating">
                                     <input type="number" class="form-control" [(ngModel)]="model.vigencia" id="Vigencia" (input)="calcularFechaTermino()" min="1" max="999">
                                     <label for="Vigencia">Vigencia (meses)</label>
                                 </div>
                                 <span *ngIf="ferr('Vigencia')" class="text-danger">{{ terr('Vigencia') }}</span>
                             </div>
-                            <div class="col-sm-12 col-md-3 mb-3">
+                            <div class="col-sm-12 col-md-3 col-6 mb-3">
                                 <div class="form-floating">
                                     <input type="date" class="form-control custom-input" [value]="model.fechaTermino?.toISOString().substr(0, 10)" id="FechaTermino" disabled>
                                     <label for="FechaTermino">Fecha Termino</label>
                                 </div>
                                 <span *ngIf="ferr('FechaTermino')" class="text-danger">{{ terr('FechaTermino') }}</span>
                             </div>
-                        </div>
-                        <div class="row">
-                            <div class="col-sm-12 col-md-2 mb-3">
+
+                            <div class="col-sm-12 col-md-2 col-6 mb-3">
                                 <div class="form-floating">
                                     <input type="number" class="form-control" [(ngModel)]="model.porcentajeMateriales" id="PorcentajeMateriales">
                                     <label for="PorcentajeMateriales">Porcentaje Materiales</label>
                                 </div>
                                 <span *ngIf="ferr('PorcentajeMateriales')" class="text-danger">{{ terr('PorcentajeMateriales') }}</span>
                             </div>
-                            <div class="col-sm-12 col-md-2 mb-3">
+                            <div class="col-sm-12 col-md-2 col-6 mb-3">
                                 <div class="form-floating">
                                     <input type="number" class="form-control" [(ngModel)]="model.porcentajeIndirectos" id="PorcentajeIndirectos">
                                     <label for="PorcentajeIndirectos">Porcentaje Indirectos</label>
                                 </div>
                                 <span *ngIf="ferr('PorcentajeIndirectos')" class="text-danger">{{ terr('PorcentajeIndirectos') }}</span>
                             </div>
-                            <div class="col-sm-12 col-md-2 mb-3">
+                            <div class="col-sm-12 col-md-2 col-6 mb-3">
                                 <div class="form-floating">
                                     <input type="number" class="form-control" [(ngModel)]="model.diaLimiteFacturar" id="DiaLimiteFacturar">
                                     <label for="DiaLimiteFacturar">Dia Limite Facturar</label>
@@ -195,14 +194,14 @@
                                 <span *ngIf="ferr('DiaLimiteFacturar')" class="text-danger">{{ terr('DiaLimiteFacturar') }}</span>
                             </div>
 
-                            <div class="col-sm-12 col-md-2 mb-3">
+                            <div class="col-sm-12 col-md-2 col-6 mb-3">
                                 <div class="form-floating">
                                     <input type="number" class="form-control custom-input" [(ngModel)]="model.totalSucursales" id="TotalSucursales" disabled>
                                     <label for="TotalSucursales">Total Sucursales</label>
                                 </div>
                                 <span *ngIf="ferr('TotalSucursales')" class="text-danger">{{ terr('TotalSucursales') }}</span>
                             </div>
-                            <div class="col-sm-12 col-md-2 mb-3">
+                            <div class="col-sm-12 col-md-2 col-6 mb-3">
                                 <div class="form-floating">
                                     <input type="number" class="form-control custom-input" [(ngModel)]="model.totalEmpleados" id="TotalEmpleados" disabled>
                                     <label for="TotalEmpleados">Total Empleados</label>
@@ -212,7 +211,7 @@
 
                         </div>
                         <div class="row mb-3">
-                            <div class="col-md-2">
+                            <div class="col-md-2 col-12 mb-3">
                                 Incluye:
                             </div>
                             <div class="col-sm-6 col-md-2 col-4">
@@ -231,7 +230,7 @@
                             </div>
                         </div>
                         <div class="row">
-                            <div class="col-md-2">
+                            <div class="col-md-2 col-12 mb-3">
                                 Deductivas por:
                             </div>
                             <div class="col-sm-6 col-md-2 col-4">
@@ -255,7 +254,7 @@
                                     </label><br />
                                 </div>
                             </div>
-                            <div class="col-sm-6 col-md-2 col-4">
+                            <div class="col-sm-6 col-md-2 col-6">
                                 <div class="form-check">
                                     <label class="form-check-label">
                                         <input class="form-check-input" type="checkbox" [(ngModel)]="model.deductivaPlazoEntrega" /> Plazo de entrega
@@ -266,28 +265,28 @@
                         <hr />
                         <h6><span class="small text-muted mb-2">Contrato</span></h6>
                         <div class="row mb-3">
-                            <div class="col-sm-6 col-md-3 col-4">
+                            <div class="col-sm-6 col-md-3 col-6">
                                 <div class="form-check">
                                     <label class="form-check-label">
-                                        <input class="form-check-input" type="radio" name="contrato" [value]="false" [(ngModel)]="tipoContrato" required /> Generar y cargar contrato base
+                                        <input class="form-check-input" type="radio" name="contrato" [value]="false" [(ngModel)]="tipoContrato" required /> Generar y cargar automáticamente un contrato base
                                     </label><br />
                                 </div>
                             </div>
-                            <div class="col-sm-6 col-md-3 col-4">
+                            <div class="col-sm-6 col-md-3 col-6">
                                 <div class="form-check">
                                     <label class="form-check-label">
-                                        <input class="form-check-input" type="radio" name="contrato" [value]="true" [(ngModel)]="tipoContrato" required /> Cargar contrato de cliente
+                                        <input class="form-check-input" type="radio" name="contrato" [value]="true" [(ngModel)]="tipoContrato" required /> Elegir contrato de cliente
                                     </label><br />
                                 </div>
                             </div>
                         </div>
-                        <div class="row" *ngIf="tipoContrato == true">
-                            <div class="col-md-3 col-4 mb-3 text-center">
+                        <div class="row d-flex align-items-center" *ngIf="tipoContrato == true">
+                            <div class="col-md-3 col-4 text-center">
                                 <input type="file" accept=".pdf,.docx" (change)="onContratoSeleccionado($event)" style="display: none;" #contratoInput>
                                 <button class="btn btn-outline-secondary" (click)="contratoInput.click()"><i class="fa-solid fa-magnifying-glass"></i> Buscar</button>
 
                             </div>
-                            <div class="col-md-3 col-4 mb-3">
+                            <div class="col-md-3 col-6">
                                 <div *ngIf="contratoSeleccionado" class="form-floating">
                                     <input type="text" class="form-control custom-input" value="{{ contratoSeleccionado.name }}" placeholder="Contrato" disabled>
                                     <label asp-for="Keywords">Seleccionado:</label>
@@ -298,8 +297,6 @@
                                 <button *ngIf="contratoSeleccionado" class="btn btn-outline-danger" (click)="limpiarContrato()">
                                     <i class="fa-solid fa-trash"></i>
                                 </button>
-                            </div>
-                            <div class="col-md-5 col-2 mb-3">
                             </div>
                         </div>
                     </div>
